==> longdelu/NBlot/程序源码/（库函数版本，适合阿波罗STM32F429开发板）ATK-BC28 NBIOT模块实验/HARDWARE/NBIOT_UART/atk_nbiot_usart.c <==
#include "atk_nbiot_usart.h"
#include "atk_delay.h"
#include "stdio.h"

uart_dev_t *atk_nbiot_uart_init (u32 bound)
{      
    int err = 0;
    
    nbiot_uart.Instance = USART3;
    nbiot_uart.Init.BaudRate = bound;
    nbiot_uart.Init.WordLength = UART_WORDLENGTH_8B;
    nbiot_uart.Init.StopBits = UART_STOPBITS_1;
    nbiot_uart.Init.Parity = UART_PARITY_NONE;
    nbiot_uart.Init.Mode = UART_MODE_TX_RX;
    nbiot_uart.Init.HwFlowCtl = UART_HWCONTROL_NONE; 

    HAL_USART3_MspInit(&nbiot_uart); 
    
       
    if (HAL_UART_Init(&nbiot_uart) != HAL_OK)
    {
       _Error_Handler(__FILE__, __LINE__);
    }
    
    //初始接收超时，如果两个字符之间的接收时间超过10ms没有到来，可以认为接收完成
    atk_soft_timer_init(&uart_dev.uart_rx_timer, __lpuart_rx_timeout_cb, &uart_dev, 10, 0);     
    
    //初始化接收环形缓冲区
    err = atk_ring_buf_init(&g_uart_ring_buf);
   
    //填充这个串口设备结构体    
    uart_dev.p_huart    = &nbiot_uart; 
    uart_dev.uart_event = UART_NONE_EVENT;   
    uart_dev.bound      = bound; 
    
    if (err == 0) 
    {
        uart_dev.p_uart_ring_buff  = &g_uart_ring_buf;           
    }
    else
    {
        uart_dev.p_uart_ring_buff  = NULL;   
    }


    //禁能串口
     __HAL_UART_DISABLE(&nbiot_uart);    

    __HAL_UART_DISABLE_IT(&nbiot_uart, UART_IT_TXE);  //禁止发送中断 
    __HAL_UART_DISABLE_IT(&nbiot_uart, UART_IT_TC);   //禁能发送完成中断   
    
    //清除rx中断标记
    __HAL_UART_CLEAR_FLAG(&nbiot_uart, UART_FLAG_RXNE);
      
    //清除ilde中断标记
    __HAL_UART_CLEAR_IDLEFLAG(&nbiot_uart); 
     
    __HAL_UART_ENABLE_IT(&nbiot_uart, UART_IT_RXNE);    //开启接收中断      
    __HAL_UART_ENABLE_IT(&nbiot_uart, UART_IT_IDLE);    //开启空闲中断 
    

    HAL_NVIC_EnableIRQ(USART3_IRQn);                //使能USART3中断通道
    HAL_NVIC_SetPriority(USART3_IRQn,3,3);          //抢占优先级3，子优先级3
    
    //使能串口
     __HAL_UART_ENABLE(&nbiot_uart);   
       
    return  &uart_dev;   
}

static void __lpuart_rx_timeout_cb (void *p_arg)
{
    
    uart_dev_t *p_lpuart_dev  = (uart_dev_t *)p_arg;
    
    UART_HandleTypeDef *p_huart = p_lpuart_dev->p_huart;

#if !UART_ANY_DATA_LEN_RECV 
 
    /* Disable the UART Parity Error Interrupt and RXNE interrupts */
#if defined(USART_CR1_FIFOEN)
    CLEAR_BIT(p_huart->Instance->CR1, (USART_CR1_RXNEIE_RXFNEIE | USART_CR1_PEIE));
#else
    CLEAR_BIT(p_huart->Instance->CR1, (USART_CR1_RXNEIE | USART_CR1_PEIE));
#endif //endif  USART_CR1_FIFOEN
    
    /* Disable the UART Error Interrupt: (Frame error, noise error, overrun error) */
    CLEAR_BIT(p_huart->Instance->CR3, USART_CR3_EIE);     
    
#endif //endif    UART_ANY_DATA_LEN_RECV
    
    //reset the p_huart->RxState
    p_huart->State= HAL_UART_STATE_READY; 

    //清垃圾数据
    READ_REG(p_huart->Instance->DR);
             
    //清除溢出中断标记
    __HAL_UART_CLEAR_OREFLAG(p_huart); 
                                  
    //清除帧错误中断标记
    __HAL_UART_CLEAR_FEFLAG(p_huart); 
    
    //清除NE错误中断标记
    __HAL_UART_CLEAR_NEFLAG(p_huart);
                                       
    //清除校验中断标记
    __HAL_UART_CLEAR_PEFLAG(p_huart); 
                                              
    //清除接收中断
    __HAL_UART_CLEAR_FLAG(&nbiot_uart, UART_FLAG_RXNE);
    
    //清除ilde中断标记
    __HAL_UART_CLEAR_IDLEFLAG(&nbiot_uart); 

    //重新开启接收中断 
    __HAL_UART_ENABLE_IT(p_huart, UART_IT_RXNE);  
    
    printf("rx timer happen\r\n");    
          
    //设置串口接收超时事件
    uart_event_set(p_lpuart_dev, UART_RX_TIMEOUT_EVENT);    
}

void USART3_IRQHandler(void)                    
{ 
    
    if ((__HAL_UART_GET_FLAG(&nbiot_uart, UART_FLAG_RXNE) != RESET))  
    {      
        //把数据写入环形缓冲区
        atk_ring_buf_write(&g_uart_ring_buf, nbiot_uart.Instance->DR);  
                      
        //收到一个数据，重置超时为500ms 
        atk_soft_timer_timeout_change(&uart_dev.uart_rx_timer, 500);
               
        // 收到数据表明，发送在超时时间内正常完成，停止发送超时  
        atk_soft_timer_stop(&uart_dev.uart_tx_timer);                                   
    }
    
    //ilde中断产生，代表当前数据帧接收结束
    if ((__HAL_UART_GET_FLAG(&nbiot_uart, UART_FLAG_IDLE)!=RESET))  
    {        
        //如果是空闲中断一开始是使能的
        if (__HAL_UART_GET_IT_SOURCE(&nbiot_uart, UART_IT_IDLE)!=RESET) 
        {
           
           //接收在超时时间内正常完成，停止接收超时  
           atk_soft_timer_stop(&uart_dev.uart_rx_timer);
           
           //设置串口接收完成事件
           uart_event_set(&uart_dev, UART_RX_EVENT); 
         
          #if !UART_ANY_DATA_LEN_RECV 
           
              /* Disable the UART Parity Error Interrupt and RXNE interrupts */
          #if defined(USART_CR1_FIFOEN)
              CLEAR_BIT(nbiot_uart.Instance->CR1, (USART_CR1_RXNEIE_RXFNEIE | USART_CR1_PEIE));
          #else
              CLEAR_BIT(nbiot_uart.Instance->CR1, (USART_CR1_RXNEIE | USART_CR1_PEIE));
          #endif //endif  USART_CR1_FIFOEN
              
              /* Disable the UART Error Interrupt: (Frame error, noise error, overrun error) */
              CLEAR_BIT(nbiot_uart.Instance->CR3, USART_CR3_EIE);     
              
          #endif //endif    UART_ANY_DATA_LEN_RECV
              
              //reset the p_huart->RxState
              nbiot_uart.State= HAL_UART_STATE_READY; 
                           
              //清除NE错误中断标记
              __HAL_UART_CLEAR_NEFLAG(&nbiot_uart);
                                                                 
              //清除溢出中断标记
              __HAL_UART_CLEAR_OREFLAG(&nbiot_uart); 
                                          
              //清除帧错误中断标记
              __HAL_UART_CLEAR_FEFLAG(&nbiot_uart); 
                                                  
              //清除校验中断标记
              __HAL_UART_CLEAR_PEFLAG(&nbiot_uart); 
                                                      
              //清除接收中断
              __HAL_UART_CLEAR_FLAG(&nbiot_uart, UART_FLAG_RXNE);
            
              //重新开启接收中断 
              __HAL_UART_ENABLE_IT(&nbiot_uart, UART_IT_RXNE);                

        } 

        //清除ilde中断标记
        __HAL_UART_CLEAR_IDLEFLAG(&nbiot_uart);     
                            
    }      
}

int uart_data_tx_poll(uart_handle_t uart_handle, uint8_t *pData,uint16_t size, uint32_t Timeout)
{   
    int ret = 0;
    
    int tx_int_flag = 0;
    
    if(size == 0 || pData == NULL)
    {
       return -1;
    }
    
    tx_int_flag = __HAL_UART_GET_IT_SOURCE(uart_handle->p_huart, UART_IT_TXE);
    
    
    if (tx_int_flag) {
    
        __HAL_UART_DISABLE_IT(uart_handle->p_huart, UART_IT_TXE);    //禁能发送中断  
    }    
        
    /* 发送设置超时为 Timeout ms */ 
    ret = HAL_UART_Transmit(uart_handle->p_huart, pData, size, Timeout);
    
    
    if (ret == HAL_TIMEOUT) {
      
        //设置串口发送超时事件
        uart_event_set(uart_handle, UART_TX_TIMEOUT_EVENT); 
      
        return ret;
        
    } else if (ret == HAL_OK) {
        
        //设置串口发送完成事件
        uart_event_set(uart_handle, UART_TX_EVENT);         
    }   
    
    if (tx_int_flag) {
    
        __HAL_UART_ENABLE_IT(uart_handle->p_huart, UART_IT_TXE);    //使能发送中断     
    }
    
    
    /* 初始超时计算 */
    atk_soft_timer_init(&uart_handle->uart_tx_timer, __lpuart_tx_timeout_cb, uart_handle, Timeout, 0); 
    atk_soft_timer_start(&uart_handle->uart_tx_timer);    
    
    return  ret;
}
