==> longdelu/NBlot/程序源码/（库函数版本，适合战舰V3开发板）ATK-BC28 NBIOT模块实验/HARDWARE/NBIOT_UART/atk_nbiot_usart.c <==
#include "atk_nbiot_usart.h"
#include "atk_delay.h"
#include "stdio.h"

uart_dev_t *atk_nbiot_uart_init (u32 bound)
{   
    int err = 0;
  
     //GPIO端口设置
    GPIO_InitTypeDef GPIO_InitStructure;
    USART_InitTypeDef USART_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;
    
    //使能USART3，GPIOB时钟  
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);  
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3,ENABLE);
    USART_DeInit(USART3);  //复位串口3  
  
    //USART3_TX   GPIOB10
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10; 
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;    //复用推挽输出
    GPIO_Init(GPIOB, &GPIO_InitStructure);
   
    //USART3_RX      GPIOB11初始化
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;//浮空输入
    GPIO_Init(GPIOB, &GPIO_InitStructure);                

    //Usart3 NVIC 配置
    NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority=1 ;//抢占优先级1
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 2;        //子优先级2
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;            //IRQ通道使能
    NVIC_Init(&NVIC_InitStructure);    //根据指定的参数初始化VIC寄存器
  
    //USART 初始化设置
    USART_InitStructure.USART_BaudRate = bound;//串口波特率
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为8位数据格式
    USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;    //收发模式

    USART_Init(USART3, &USART_InitStructure);     //初始化串口3
  
    //初始接收超时，如果两个字符之间的接收时间超过10ms没有到来，可以认为接收完成
    atk_soft_timer_init(&uart_dev.uart_rx_timer, __lpuart_rx_timeout_cb, &uart_dev, 10, 0);     
    
    //初始化接收环形缓冲区
    err = atk_ring_buf_init(&g_uart_ring_buf);
    uart_dev.p_huart    = USART3;
    uart_dev.uart_event = UART_NONE_EVENT;   
    uart_dev.bound      = bound; 
    
    if (err == 0) 
    {
        uart_dev.p_uart_ring_buff  = &g_uart_ring_buf;           
    }
    else
    {
        uart_dev.p_uart_ring_buff  = NULL;   
    }
     
    //清除rx中断标记
    USART_ClearITPendingBit(uart_dev.p_huart, USART_IT_RXNE);
      
    //清除ilde中断标记
    USART_GetITStatus(uart_dev.p_huart, USART_IT_IDLE);
    USART_ReceiveData(uart_dev.p_huart);

    //禁能串口发送与发送完成中断
    USART_ITConfig(uart_dev.p_huart, USART_IT_TXE, DISABLE);
    USART_ITConfig(uart_dev.p_huart, USART_IT_TC,  DISABLE);    
     
    USART_ITConfig(uart_dev.p_huart, USART_IT_RXNE, ENABLE);  //开启串口接收中断
    USART_ITConfig(uart_dev.p_huart, USART_IT_IDLE, ENABLE);  //开启空闲中断 
        
    //使能串口
    USART_Cmd(uart_dev.p_huart, ENABLE);                    
       
    return &uart_dev;   
}

static void __lpuart_rx_timeout_cb (void *p_arg)
{
    
    uart_dev_t *p_lpuart_dev  = (uart_dev_t *)p_arg;
    
    USART_TypeDef *p_huart = p_lpuart_dev->p_huart;

#if !UART_ANY_DATA_LEN_RECV 
 
    /* Disable the UART Parity Error Interrupt and RXNE interrupts */

    CLEAR_BIT(p_huart->Instance->CR1, (USART_CR1_RXNEIE | USART_CR1_PEIE));
    
    /* Disable the UART Error Interrupt: (Frame error, noise error, overrun error) */
    CLEAR_BIT(p_huart->Instance->CR3, USART_CR3_EIE);     
    
#endif //endif  UART_ANY_DATA_LEN_RECV
    
            
    //清除溢出中断标记
    USART_GetITStatus(p_huart, USART_IT_ORE);
    USART_ReceiveData(p_huart);
                                  
    //清除帧错误中断标记
    USART_GetITStatus(p_huart, USART_IT_FE);
    USART_ReceiveData(p_huart);
                                       
    //清除校验中断标记
    USART_GetITStatus(p_huart, USART_IT_PE);
    USART_ReceiveData(p_huart);
    
    //清除噪声中断标记
    USART_GetITStatus(p_huart, USART_IT_NE);
    USART_ReceiveData(p_huart);    
                                              
    //清除rx中断标记
    USART_ClearITPendingBit(p_huart, USART_IT_RXNE);
    
    //清除ilde中断标记
    USART_GetITStatus(p_huart, USART_IT_IDLE);
    USART_ReceiveData(p_huart);

    //重新开启接收中断 
    USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);  //开启串口接收中断
    
    printf("rx timer happen\r\n");    
          
    //设置串口接收超时事件
    uart_event_set(p_lpuart_dev, UART_RX_TIMEOUT_EVENT);    
}

void USART3_IRQHandler(void)                    
{ 
    
    if ((USART_GetITStatus(uart_dev.p_huart, USART_IT_RXNE) != RESET))  
    { 
      
        //把数据写入环形缓冲区
        atk_ring_buf_write(&g_uart_ring_buf, uart_dev.p_huart->DR);  
                      
        //收到一个数据，重置超时为500ms 
        atk_soft_timer_timeout_change(&uart_dev.uart_rx_timer, 500);
               
        // 收到数据表明，发送在超时时间内正常完成，停止发送超时  
        atk_soft_timer_stop(&uart_dev.uart_tx_timer);
                                   
    }
    
    //ilde中断产生，代表当前数据帧接收结束
    if ((USART_GetITStatus(uart_dev.p_huart, USART_IT_IDLE)!=RESET))  
    {        
        //如果是空闲中断一开始是使能的
        if (__uart_ilde_is_enable(uart_dev.p_huart)!=RESET) 
        {
           
            //接收在超时时间内正常完成，停止接收超时  
            atk_soft_timer_stop(&uart_dev.uart_rx_timer);
           
            //设置串口接收完成事件
            uart_event_set(&uart_dev, UART_RX_EVENT); 
         
            #if !UART_ANY_DATA_LEN_RECV 
             
                /* Disable the UART Parity Error Interrupt and RXNE interrupts */ 
                CLEAR_BIT(nbiot_uart.Instance->CR1, (USART_CR1_RXNEIE | USART_CR1_PEIE));
              
                /* Disable the UART Error Interrupt: (Frame error, noise error, overrun error) */
                CLEAR_BIT(nbiot_uart.Instance->CR3, USART_CR3_EIE);     
                
            #endif //endif    UART_ANY_DATA_LEN_RECV
                                            
            //清除溢出中断标记
            USART_GetITStatus(uart_dev.p_huart, USART_IT_ORE);
            USART_ReceiveData(uart_dev.p_huart);
                                          
            //清除帧错误中断标记
            USART_GetITStatus(uart_dev.p_huart, USART_IT_FE);
            USART_ReceiveData(uart_dev.p_huart);
                                               
            //清除校验中断标记
            USART_GetITStatus(uart_dev.p_huart, USART_IT_PE);
            USART_ReceiveData(uart_dev.p_huart);
            
            //清除噪声中断标记
            USART_GetITStatus(uart_dev.p_huart, USART_IT_NE);
            USART_ReceiveData(uart_dev.p_huart);    
                                                      
            //清除rx中断标记
            USART_ClearITPendingBit(uart_dev.p_huart, USART_IT_RXNE);
            

            //重新开启接收中断 
            USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);  //开启串口接收中断              
         
         
        } 

        //清除ilde中断标记
        USART_GetITStatus(uart_dev.p_huart, USART_IT_IDLE);
        USART_ReceiveData(uart_dev.p_huart);                              
    }   
}

int uart_data_tx_poll(uart_handle_t uart_handle, uint8_t *pData,uint16_t size, uint32_t Timeout)
{     
    uint32_t i = 0;
        
    if(size == 0 || pData == NULL)
    {
       return -1;
    }
           
    //初始超时计算
    atk_soft_timer_init(&uart_handle->uart_tx_timer, __lpuart_tx_timeout_cb, uart_handle, Timeout, 0); 
    
    //设置发送超时响应事件
    atk_soft_timer_start(&uart_handle->uart_tx_timer); 
    
    for (i = 0; i < size; i ++)
    {  
         //等待上一次数据发送完成 
         while((uart_handle->p_huart->SR&0X40)==0);
         //发送数据
         USART_SendData(uart_handle->p_huart, pData[i]);
    } 

    //设置串口发送完成事件
    uart_event_set(&uart_dev, UART_TX_EVENT);
    
    return 0;    
}
